Header Update (fix unaligned social icons)
- made sure correct css/js is live
- aligned social icons
- added wow.js to box in header

--- a/scss/layouts/homepage.scss
+++ b/scss/layouts/homepage.scss
@@ -50,9 +50,10 @@
 }
 
 #get_connected {
-  display: none;
+  // display: none;
   background-color: darken($darkgrey, 10%);
   min-height: auto;
+  height: auto;
   color: darken(#f2f2f2, 10%);
 
   p {
@@ -88,6 +89,11 @@
   .heading span {
     width: 100%;
     display: block;
+  }
+
+  .social-icons {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
